# Copyright (C) 2023-2024 Rowan Hart
# SPDX-License-Identifier: Apache-2.0

[package]
description = "Generate getters, mutable getters, setters, and copy accessors for structs and enums"
edition = "2021"
license = "Apache-2.0"
name = "getters3"
repository = "https://github.com/Wenzel/getters3"
version = "0.1.0"
readme = "README.md"
keywords = ["derive", "getter", "setter", "accessor", "macro"]

[lib]
proc-macro = true

[dependencies]
darling = "=0.20.10"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
